# nmos-cpp

./: .gdrive-credentials.json.enc  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  conanfile.py
Development/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  nmos-cpp-node.bat  nmos-cpp-registry.bat  nmos-cpp.sln
Development/boost/asio/ssl/: set_cipher_list.hpp  (+1 more)
Development/boost/thread/: win32_condition_variable.hpp
Development/bst/: any.h  filesystem.h  optional.h  placeholders.h  regex.h  shared_mutex.h
Development/bst/test/: test.h
Development/catch/: catch.hpp
Development/cmake/: CMakeRegexEscape.cmake  NmosCppCommon.cmake  NmosCppCompileSettings.cmake  NmosCppConan.cmake  NmosCppDependencies.cmake  NmosCppExports.cmake  NmosCppGeneral.cmake  NmosCppLibraries.cmake  NmosCppNode.cmake  NmosCppRegTest.cmake  NmosCppRegistry.cmake  NmosCppTest.cmake  nmos-cpp-config.cmake.in  safeguards.cmake
Development/cpprest/: access_token_error.h  api_router.cpp  api_router.h  basic_utils.h  client_type.h  code_challenge_method.h  grant_type.h  host_utils.cpp  host_utils.h  http_utils.cpp  http_utils.h  json_escape.cpp  json_escape.h  json_ops.h  json_storage.cpp  json_storage.h  json_utils.cpp  json_utils.h  json_validator.h  json_validator_impl.cpp  json_visit.cpp  json_visit.h  logging_utils.h  regex_utils.h  resource_server_error.h  response_type.h  token_endpoint_auth_method.h  uri_schemes.h  ws_listener.h  ws_listener_impl.cpp  ws_utils.h
Development/cpprest/details/: boost_u_workaround.h  pop_u.h  push_undef_u.h  system_error.h
Development/cpprest/test/: api_router_test.cpp  basic_utils_test.cpp  http_utils_test.cpp  json_utils_test.cpp  json_visit_test.cpp  regex_utils_test.cpp  ws_listener_test.cpp
Development/detail/: default_init_allocator.h  for_each_reversed.h  pragma_warnings.h  private_access.h  private_test.h  vc_disable_dll_warnings.h  vc_disable_warnings.h
Development/jwk/: algorithm.h  public_key_use.h
Development/jwt/: nlohmann_traits.h
Development/lldp/: lldp.cpp  lldp.h  lldp_frame.cpp  lldp_frame.h  lldp_manager.h  lldp_manager_impl.cpp
Development/lldp/test/: lldp_test.cpp
Development/mdns/: bonjour_dns_impl.cpp  bonjour_dns_impl.h  core.cpp  core.h  dns_sd_impl.cpp  dns_sd_impl.h  mdns.vcxproj  mdns.vcxproj.filters  packages.config  service_advertiser.cpp  service_advertiser.h  service_advertiser_impl.cpp  service_advertiser_impl.h  service_discovery.cpp  service_discovery.h  service_discovery_impl.cpp  service_discovery_impl.h
Development/mdns/test/: core_test.cpp  mdns_test.cpp
Development/nmos/: activation_mode.h  activation_utils.cpp  activation_utils.h  admin_ui.cpp  admin_ui.h  annotation_api.cpp  annotation_api.h  api_downgrade.cpp  api_downgrade.h  api_utils.cpp  api_utils.h  api_version.h  asset.h  authorization.cpp  authorization.h  authorization_behaviour.cpp  authorization_behaviour.h  authorization_handlers.cpp  authorization_handlers.h  authorization_operation.cpp  authorization_operation.h  authorization_redirect_api.cpp  authorization_redirect_api.h  authorization_scopes.h  authorization_state.cpp  authorization_state.h  authorization_utils.cpp  authorization_utils.h  callbacks.h  capabilities.cpp  capabilities.h  certificate_handlers.cpp  certificate_handlers.h  certificate_settings.h  channelmapping_activation.cpp  channelmapping_activation.h  channelmapping_api.cpp  channelmapping_api.h  channelmapping_resources.cpp  channelmapping_resources.h  (+243 more)
Development/nmos-cpp-node/: config.is10.json  config.jrt.json  config.json  main.cpp  main_gate.h  nmos-cpp-node.vcxproj  nmos-cpp-node.vcxproj.filters  node_application_hooks.cpp  node_application_hooks.h  node_implementation.cpp  node_implementation.h  node_main_thread.cpp  node_resources_thread.cpp
Development/nmos-cpp-registry/: config.json  main.cpp  main_gate.h  nmos-cpp-registry.vcxproj  nmos-cpp-registry.vcxproj.filters  packages.config  registry_implementation.cpp  registry_implementation.h
Development/nmos-cpp-registry/test/: main.cpp  nmos-cpp-registry-test.vcxproj  nmos-cpp-registry-test.vcxproj.filters
Development/nmos/bcp00401_schemas/: bcp00401_schemas.h
Development/nmos/is04_schemas/: is04_schemas.h
Development/nmos/is05_schemas/: is05_schemas.h
Development/nmos/is08_schemas/: is08_schemas.h
Development/nmos/is09_schemas/: is09_schemas.h
Development/nmos/is10_schemas/: is10_schemas.h
Development/nmos/is11_schemas/: is11_schemas.h
Development/nmos/is12_schemas/: is12_schemas.h
Development/nmos/is13_schemas/: is13_schemas.h
Development/nmos/is14_schemas/: is14_schemas.h
Development/nmos/system_schemas/: system_schemas.h
Development/nmos/test/: annotation_api_test.cpp  api_downgrade_test.cpp  api_utils_test.cpp  bcp_008_test.cpp  capabilities_test.cpp  channels_test.cpp  condition_variable_test.cpp  configuration_methods_test.cpp  configuration_resources_test.cpp  configuration_utils_test.cpp  connection_resources_test.cpp  constraints_test.cpp  control_protocol_methods_test.cpp  control_protocol_test.cpp  control_protocol_utils_test.cpp  did_sdid_test.cpp  event_type_test.cpp  json_validator_test.cpp  jwt_generator_test.cpp  jwt_validation_test.cpp  mdns_test.cpp  node_interfaces_test.cpp  paging_utils_test.cpp  query_api_test.cpp  query_utils_test.cpp  rwnode_api_test.cpp  sdp_temporal_redundancy_test.cpp  sdp_test_utils.cpp  sdp_test_utils.h  sdp_utils_test.cpp  settings_test.cpp  slog_test.cpp  streamcompatibility_validation_test.cpp  system_resources_test.cpp  video_jxsv_test.cpp
Development/pplx/: pplx_utils.cpp  pplx_utils.h
Development/pplx/test/: pplx_utils_test.cpp
Development/rpi/: Toolchain-rpi.cmake
Development/rql/: rql.cpp  rql.h
Development/rql/test/: rql_test.cpp
Development/sdp/: json.h  ntp.h  sdp.h  sdp_grammar.cpp  sdp_grammar.h
Development/sdp/test/: sdp_test.cpp
Development/slog/: all_in_one.h
Development/ssl/: ssl_utils.cpp  ssl_utils.h
Development/ssl/test/: ssl_test.cpp  ssl_utils_test.cpp
Sandbox/my-nmos-node/: .gitignore  CMakeLists.txt  conanfile.txt
(+46 files in other folders)
